--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,23 @@
 absl-py==2.3.1
 ale-py==0.11.2
 cloudpickle==3.1.1
-contourpy==1.3.3
+contourpy>=1.3.3
 cycler==0.12.1
 Farama-Notifications==0.0.4
-filelock==3.20.0
+filelock>=3.19.0
 fonttools==4.60.1
 fsspec==2025.9.0
 grpcio==1.75.1
-gymnasium==1.2.1
+gymnasium>=1.1.1
 Jinja2==3.1.6
-kiwisolver==1.4.9
+kiwisolver>=1.4.7
 Markdown==3.9
-markdown-it-py==4.0.0
+markdown-it-py>=3.0.0
 MarkupSafe==3.0.3
-matplotlib==3.10.7
+matplotlib>=3.9.0
 mdurl==0.1.2
 mpmath==1.3.0
-networkx==3.5
+networkx>=3.2
 numpy==2.2.6
 nvidia-cublas-cu12==12.8.4.1
 nvidia-cuda-cupti-cu12==12.8.90
