--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,24 @@
 absl-py==2.3.1
 ale-py==0.11.2
 cloudpickle==3.1.1
-contourpy>=1.3.3
+contourpy==1.3.3
 cycler==0.12.1
 Farama-Notifications==0.0.4
-filelock>=3.19.0
+filelock==3.20.0
 fonttools==4.60.1
 fsspec==2025.9.0
 grpcio==1.75.1
-gymnasium>=1.1.1
+gymnasium==1.2.1
 Jinja2==3.1.6
-kiwisolver>=1.4.7
+joblib==1.5.2
+kiwisolver==1.4.9
 Markdown==3.9
-markdown-it-py>=3.0.0
+markdown-it-py==4.0.0
 MarkupSafe==3.0.3
-matplotlib>=3.9.0
+matplotlib==3.10.7
 mdurl==0.1.2
 mpmath==1.3.0
-networkx>=3.2
+networkx==3.5
 numpy==2.2.6
 nvidia-cublas-cu12==12.8.4.1
 nvidia-cuda-cupti-cu12==12.8.90
@@ -45,12 +46,16 @@ pyparsing==3.2.5
 python-dateutil==2.9.0.post0
 pytz==2025.2
 rich==14.1.0
+sb3_contrib==2.7.0
+scikit-learn==1.7.2
+scipy==1.16.2
 setuptools==80.9.0
 six==1.17.0
 stable_baselines3==2.7.0
 sympy==1.14.0
 tensorboard==2.20.0
 tensorboard-data-server==0.7.2
+threadpoolctl==3.6.0
 torch==2.8.0
 tqdm==4.67.1
 triton==3.4.0
